

Name: Harmoni Change-Log


v. 0.12.3 (2007-09-25)
----------------------------------------------------
		
	* New feature: 
		
		GUI: New 'UnstyledMenuItem' element.
		(2007-09-25 - Adam Franco)
		
	* Change: 
		GUI: MenuLinks with Additional HTML now put that additional HTML in the
		themed part of the element.
		(2007-09-21 - Adam Franco)
		
	* Bug Fix: 
		Hierarchy: Catching 'not found' Exceptions added in 0.12.2 in cases where no
		results should exist.
		(2007-09-21 - Adam Franco)
	
v. 0.12.2 (2007-09-20)
----------------------------------------------------
		
	* Change: 
		Removed the legacy StorageHandler. If this functionality is needed in the
		future, the Filing OSID is more appropriate.
		(2007-09-19 - Adam Franco)
		
	* Bug Fix: 
		
		Updated PhpDoc comments to generate properly.
		(2007-09-19 - Adam Franco)
		
	* Bug Fix: 
		
		Agent: Fixed column type-mismatch in Agent table definition.
		(2007-09-17 - Adam Franco)
		
	* Bug Fix: 
		DBHandler: SQLUtils::runSQLdir() now explicitly sorts SQL files and runs
		them in alphabetical order.
		(2007-09-17 - Adam Franco)
		
	* Bug Fix: 
		
		Repository: Fixing PHP notices.
		(2007-09-14 - Adam Franco)
		
	* Change: 
		
		Hierarchy: Adding some error-checking and Exceptions on errors.
		(2007-09-14 - Adam Franco)
	
v. 0.12.1 (2007-09-14)
----------------------------------------------------
		
	* Bug Fix: 
		Updating the MySQL Hierarchy and Scheduling table definitions to work with
		fixes in harmoni-0.12.0.
		(2007-09-14 - Adam Franco)
	
v. 0.12.0 (2007-09-13)
----------------------------------------------------
		
	**** IMPORTANT *** Change: 
		In order to support PostgreSQL without refactoring of the Database Handler,
		column names have been all made lowercase. To update a currently populated
		harmoni database to the new names, run the following updater script:
		harmoni/core/DBHandler/db_updater.php 
		(2007-09-11 - Adam Franco)
		
		
	**** IMPORTANT *** Change: 