@@ -25,6 +25,9 @@
 <h2>Version 0.12.3</h2>
 <h3>2007-09-25</h3>
 <ul>
+		<li> Change:  
+			ImageProcessor: Now throws exceptions when ImageMagic fails.
+		 (<em>2007-09-25 - Adam Franco</em>)</li>
 		<li> New feature:  
 			GUI: New 'UnstyledMenuItem' element.
 		 (<em>2007-09-25 - Adam Franco</em>)</li>
