@@ -3,12 +3,15 @@
  @package harmoni.docs
  @copyright Copyright &copy; 2005, Middlebury College
  @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
- @version $Id: changelog.xml,v 1.175 2007/09/25 18:33:03 adamfranco Exp $
+ @version $Id: changelog.xml,v 1.176 2007/09/25 19:33:15 adamfranco Exp $
  -->
 <!DOCTYPE changelog SYSTEM "../dtds/changelog.dtd">
 
 <changelog name="Harmoni Change-Log">
 	<version number="0.12.3" date="2007-09-25">
+		<change author='adam' date='2007-09-25'>
+			ImageProcessor: Now throws exceptions when ImageMagic fails.
+		</change>
 		<new author='adam' date='2007-09-25'>
 			GUI: New 'UnstyledMenuItem' element.
 		</new>
